tests/build/cases/property/invalid_priority.stderr
error: expected one of: `context`, `event`, `layout`, `size`, `border`, `fill`, `child_context`, `child_layout`, `capture_only`
 --> cases/property/invalid_priority.rs:3:12
  |
3 | #[property(invalid)]
  |            ^^^^^^^
